<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hogwarts"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.android.hogwarts.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_padding_medium">

            <TextView
                android:id="@+id/hogwarts_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_medium"
                android:layout_marginRight="@dimen/margin_padding_medium"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:text="@string/title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:id="@+id/hogwarts_motto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_medium"
                android:layout_marginRight="@dimen/margin_padding_medium"
                android:paddingTop="@dimen/margin_padding_small"
                android:text="@string/description"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/platform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_medium"
                android:layout_marginRight="@dimen/margin_padding_medium"
                android:paddingTop="@dimen/margin_padding_small"
                android:text="@string/address"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_padding_medium">

            <TextView
                android:id="@+id/weblink"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_medium"
                android:layout_marginRight="@dimen/margin_padding_medium"
                android:autoLink="web"
                android:text="@string/website" />

            <LinearLayout
                android:id="@+id/phone_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_medium"
                android:layout_marginRight="@dimen/margin_padding_medium"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone_number"
                    style="@style/textViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_padding_small"
                    android:layout_marginRight="@dimen/margin_padding_small"
                    android:layout_weight="1"
                    android:text="@string/phone" />

                <ImageButton
                    android:id="@+id/call_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_padding_small"
                    android:layout_marginRight="@dimen/margin_padding_small"
                    android:contentDescription="@string/call_button"
                    android:src="@drawable/ic_call_black" />

                <ImageButton
                    android:id="@+id/msg_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_padding_small"
                    android:layout_marginRight="@dimen/margin_padding_small"
                    android:contentDescription="@string/message_button"
                    android:src="@drawable/ic_message_black" />

            </LinearLayout>

            <TextView
                android:id="@+id/play_text"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_medium"
                android:layout_marginRight="@dimen/margin_padding_medium"
                android:paddingBottom="@dimen/margin_padding_small"
                android:text="@string/listenToSong"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/audio_buttons"
                style="?android:buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_small"
                android:layout_marginLeft="@dimen/margin_padding_medium"
                android:layout_marginRight="@dimen/margin_padding_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/play_button"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_padding_small"
                    android:layout_marginRight="@dimen/margin_padding_small"
                    android:background="@drawable/button_selector"
                    android:text="@string/playButton"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/stop_button"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_small"
                    android:layout_marginStart="@dimen/margin_padding_small"
                    android:background="@drawable/button_selector"
                    android:text="@string/stopButton"
                    android:textColor="@android:color/white" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>
